syntax = "proto3";

option go_package = "github.com/skip-mev/cns/api/types";

package api;

message Chain {
    reserved 4,5;

    string chain_name = 1; 
    string chain_id = 2;
    bool pfm_enabled = 3;
    ModuleSupport cosmos_module_support = 6;
    bool supports_memo = 7;
    optional string logo_uri = 8;
    string bech32_prefix = 9;
    repeated FeeAsset fee_assets = 10;
    string chain_type = 11;
    IbcCapabilities ibc_capabilities = 12;
    bool is_testnet = 13;
    string pretty_name = 14;
}

message ModuleSupport {
    bool authz = 1;
    bool feegrant = 2;
}

message FeeAsset {
    string denom = 1;
    GasPriceInfo gas_price = 2;
}

message GasPriceInfo {
    string low = 1;
    string average = 2;
    string high = 3;
}

message IbcCapabilities {
    bool cosmos_pfm = 1;
    bool cosmos_ibc_hooks = 2;
    bool cosmos_memo = 3;
    bool cosmos_autopilot = 4;
}
